[gd_scene load_steps=2 format=3 uid="uid://dhj8xnw7yx3qa"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="HPContainer" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 320.0
offset_bottom = -20.0
grow_vertical = 0

[node name="HPLabel" type="Label" parent="HPContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HP: 100"

[node name="HPBar" type="ProgressBar" parent="HPContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="AmmoContainer" type="VBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="AmmoLabel" type="Label" parent="AmmoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "30 / 120"
horizontal_alignment = 2

[node name="WeaponNameLabel" type="Label" parent="AmmoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "돌격소총"
horizontal_alignment = 2

[node name="Crosshair" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VerticalLine" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -8.0
offset_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="HorizontalLine" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -1.0
offset_right = 8.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="DamageIndicator" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0)

